ajustes no pom.xml