@@ -51,7 +51,15 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.12</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
+
 
   <build>
     <plugins>
@@ -62,8 +70,13 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+          <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
+
 
       <!-- Surefire para executar TestNG -->
       <plugin>
